fix: adjust drawer searchbar intelligent-search on mobile

--- a/styles/css/phone/header/vtex.store-drawer.css
+++ b/styles/css/phone/header/vtex.store-drawer.css
@@ -28,7 +28,7 @@
 /* Searchbar drawer */
 .drawerHeader--phone__drawer-searchbar {
     justify-content: space-between;
-    border         : solid black 1px;
+    border-bottom  : solid black 1px;
 }
 
 .drawerHeader--phone__drawer-searchbar :global(.vtex-store-drawer-0-x-closeIconButton) {
